# GeomLlama

./: .gitignore  README.md  download_data.py  make_archives.py  pyproject.toml  requirements-analysis.txt  requirements-training.txt  requirements.txt
configs/examples/: geom_8b_hybrid_ori_fh.yml  geom_8b_hybrid_ori_xyz.yml  qm9_3b_ori_fh.yml  qm9_3b_roundto3_xyz.yml  qm9_8b_ori_fh.yml  qm9_qwen14b_ori_fh.yml  qm9_qwen7b_ori_fh.yml
frontier_inference/: README.md  prompts.py  rescore.py  rmsd_align.py
pure_qm9/: README.md  bench_tools.py  eval_stats.py  eval_tables.py  infer.py  infer_vllm.py  parse.py  report.py  requirements.txt  rescore_bruteforce.py  run.py
scripts/: benchmark_geom.py  benchmark_geom_drugs.py  benchmark_qm9.py  create_ablation_data.py  create_sft_data.py  create_template_fh_from_json.py  prepare_drugs_large.py  prepare_drugs_small.py  prepare_geom.py  prepare_qm9.py  sweep_geom_drugs.py
src/geomllama/: __init__.py  connectivity.py  converter.py  data_formats.py  evaluation.py  fast_rmsd.py  inference.py  kabsch_hungarian.py  prompts.py  properties.py
synth/: README.md  __init__.py  _validate_palette.py  chem.py  config.py  generate.py  generate_smiles.py  plots.py  property_compare.py  xtb_stage.py
synth/reference/: geom_drugs_train_smiles.txt
tests/: test_converter.py  test_data_formats.py  test_splits.py  test_template_fh.py
