[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geomllama"
version = "1.0.0"
description = "Fine-tuning LLMs to generate 3D molecular geometries from SMILES strings"
readme = "README.md"
requires-python = ">=3.10"
# Lower bounds only, so the package stays installable as upstreams move. For the
# exact versions that produced the paper, use requirements-analysis.txt.
# rdkit and scikit-learn are the results-sensitive ones -- see "Known version
# issues" in README.md.
dependencies = [
    "numpy>=2.0",
    "scipy>=1.11",
    "tqdm>=4.60",
    "rdkit>=2023.9",
    "matplotlib>=3.8",
    "joblib>=1.3",
]

# Two environments, deliberately kept separate. See "Environments" in README.md.
#
# The finetuning stack (axolotl) pins torch/transformers versions that conflict
# with vllm, so [training] MUST live in its own venv and must never be installed
# alongside [analysis]. There is intentionally no "all" extra: it would resolve
# to a broken environment.
[project.optional-dependencies]
# --- Analysis environment: data prep, inference, evaluation, figures ---
data = ["scikit-learn>=1.3", "torch-geometric>=2.4"]  # prep; PyG unpickles GEOM
synth = ["pandas>=2.0", "seaborn>=0.13"]              # synth/ pipeline, Figure 3
vllm = ["vllm>=0.4"]                                  # batch inference
analysis = ["geomllama[data,synth,vllm]"]

# xTB is NOT a pip dependency: synth/xtb_stage.py shells out to the standalone
# `xtb` binary (conda-forge, or the grimme-lab/xtb releases). See README.

# --- Finetuning environment: SEPARATE venv, do not combine with the above ---
training = ["axolotl", "flash-attn", "deepspeed", "accelerate", "bitsandbytes"]

dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
